--- a/logref/www/site/index.html
+++ b/logref/www/site/index.html
@@ -8,6 +8,8 @@
     <script src="assets/js/site.js"></script>
   </head>
   <body>
+    <input type="button" onclick="myFunction()" value="click me"/>
     <p>Hello World!</p>
+    <p id="target"></p>
   </body>
 </html>
